[gd_scene load_steps=34 format=3 uid="uid://crko52geporbo"]

[ext_resource type="PhysicsMaterial" uid="uid://rgr13gn8pk0m" path="res://addons/aacc/default_car_physics_material.tres" id="1_av0nu"]
[ext_resource type="Script" uid="uid://wiw33iaw2pjg" path="res://addons/aacc/scripts/car.gd" id="1_ik2h1"]
[ext_resource type="Script" uid="uid://cffihwqtqvy4x" path="res://addons/aacc/scripts/car_plugins/wheels/car_wheel_suspension.gd" id="3_gy57t"]
[ext_resource type="Script" uid="uid://cudk564mgmydg" path="res://addons/aacc/scripts/car_plugins/processors/car_local_velocity_processor.gd" id="3_tcv0s"]
[ext_resource type="Script" uid="uid://branpjvwdtvgm" path="res://addons/aacc/scripts/car_plugins/processors/car_wheels_processor.gd" id="4_leshp"]
[ext_resource type="Script" uid="uid://bvfqai7uunpc3" path="res://addons/aacc/scripts/car_plugins/engines/car_engine.gd" id="4_pq6ol"]
[ext_resource type="Script" uid="uid://v0cpq7q6mjou" path="res://addons/aacc/scripts/car_plugins/brakes/car_brake.gd" id="7_dm0ij"]
[ext_resource type="Script" uid="uid://cil4ufto2v87g" path="res://addons/aacc/scripts/car_plugins/grips/car_side_grip.gd" id="8_dm0ij"]
[ext_resource type="Script" uid="uid://b1lao6jpcowsa" path="res://addons/aacc/scripts/car_plugins/processors/car_force_converter_processor.gd" id="9_bknco"]
[ext_resource type="Script" uid="uid://br0vp35kb6pyw" path="res://addons/aacc/scripts/car_plugins/steers/car_steer.gd" id="9_r3t53"]
[ext_resource type="Script" uid="uid://i723lqbcm7qo" path="res://addons/aacc/scripts/car_plugins/resistances/car_downforce.gd" id="10_axug4"]
[ext_resource type="Script" uid="uid://bieogbd1wisbk" path="res://addons/aacc/scripts/car_plugins/processors/car_steer_offset_processor.gd" id="10_gh3hu"]
[ext_resource type="Script" uid="uid://dbisg1nrvftc4" path="res://addons/aacc/scripts/car_plugins/grips/car_angular_grip.gd" id="10_r3t53"]
[ext_resource type="Script" uid="uid://crrd7ugev6afh" path="res://addons/aacc/scripts/helper_classes/procedural_curve.gd" id="11_0wb0t"]
[ext_resource type="Script" uid="uid://un1kd6buaufw" path="res://addons/aacc/scripts/car_plugins/extras/boosts/car_hold_boost.gd" id="12_4f48m"]
[ext_resource type="PackedScene" uid="uid://dutpfjvhdc2p1" path="res://demo_assets/kenney_car_kit/taxi.glb" id="12_r3t53"]
[ext_resource type="Material" uid="uid://brsv8h2fccu15" path="res://demo_assets/materials/taxi_body.tres" id="13_eq170"]
[ext_resource type="Script" uid="uid://put3fygiiqh8" path="res://addons/aacc/scripts/car_plugins/resistances/car_coast_resistance.gd" id="13_iv7oc"]
[ext_resource type="Script" uid="uid://cgyn0v8p7gfu6" path="res://addons/aacc/scripts/car_plugins/visuals/car_wheel_visuals.gd" id="14_n1pdp"]
[ext_resource type="Script" uid="uid://bejoolwrgdt81" path="res://addons/aacc/scripts/car_plugins/resistances/car_air_drag.gd" id="17_1amw3"]
[ext_resource type="Script" uid="uid://ceu8yif662nyj" path="res://addons/aacc/scripts/car_plugins/audio/car_engine_audio.gd" id="19_wyo5d"]
[ext_resource type="PackedScene" uid="uid://b0cyxisxowe8n" path="res://addons/aacc/scenes/audio/engine_3.tscn" id="20_xg3rg"]

[sub_resource type="Resource" id="Resource_4f48m"]
script = ExtResource("11_0wb0t")
left_value = 0.0
right_value = 1.0
max_input = 25.0
input_curve = 1.0
metadata/_custom_type_script = "uid://crrd7ugev6afh"

[sub_resource type="Curve" id="Curve_1amw3"]
_data = [Vector2(0, 0), 0.0, 3.0, 0, 0, Vector2(0.7, 1), 0.0, 0.0, 0, 0, Vector2(0.9, 0), -10.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Resource" id="Resource_n1pdp"]
script = ExtResource("11_0wb0t")
left_value = 0.0
right_value = 1.75
max_input = 10.0
input_curve = 0.5
metadata/_custom_type_script = "uid://crrd7ugev6afh"

[sub_resource type="Resource" id="Resource_0wb0t"]
script = ExtResource("11_0wb0t")
left_value = 1.0
right_value = 0.5
max_input = 10.0
input_curve = 0.5
metadata/_custom_type_script = "uid://crrd7ugev6afh"

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_gh3hu"]
points = PackedVector3Array(-0.386737, 0.05, -0.649657, 0.54101, 0.694947, 0.632256, -0.160595, -0.0218254, 1.39641, -0.771676, 0.676583, 0.43644, 0.668484, 0.414653, -0.741645, -0.538039, 0.709803, -0.71158, 0.610279, 0.05, 1.22483, -0.509089, 0.65, 1.22959, -0.626152, 0.05, 1.18485, 0.610279, 0.05, -0.37053, 0.53333, 0.65, 1.22959, 0.54101, 0.694947, -0.668777, -0.684357, 0.414653, -0.741645, -0.626152, 0.05, -0.37053, 0.755803, 0.676583, 0.43644, 0.624825, 0.28376, 1.35287, -0.684357, 0.28376, 1.26558, 0.370864, 0.05, -0.649657, 0.188381, -0.0218254, 1.39641, -0.522134, 0.698984, 0.635815, 0.755803, 0.545545, 0.567268, -0.771676, 0.545545, 0.43644, 0.668484, 0.28376, 1.30933, -0.640698, 0.28376, 1.30933, -0.160595, -0.0218254, 1.30933, 0.755803, 0.545545, 0.43644, -0.546347, 0.05, 1.26463, 0.188381, -0.0218254, 1.30933, -0.771676, 0.545545, 0.567268, 0.570377, 0.05, 1.26463)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0wb0t"]
points = PackedVector3Array(-0.626304, 0.05, -1.24888, 0.541003, 0.694983, -0.764409, 0.64001, 0.537234, -0.755985, 0.581097, 0.5892, -1.35306, -0.553524, 0.720238, -0.829476, 0.370856, 0.05, -0.770295, 0.610431, 0.05, -1.28877, -0.553524, 0.5892, -1.35306, -0.684524, 0.414653, -0.742128, -0.204237, 0.152868, -1.39683, -0.684524, 0.0218297, -1.00405, 0.668651, 0.0218297, -1.00405, -0.160659, -0.0218254, -1.30941, -0.38685, 0.05, -0.770295, -0.684524, 0.28376, -1.26577, 0.668651, 0.414653, -0.742128, -0.538056, 0.709719, -0.751408, 0.581097, 0.720238, -0.829476, 0.668651, 0.28376, -1.30941, -0.684524, 0.545545, -0.916761, 0.188231, 0.19645, -1.39683, -0.538815, 0.0542178, -1.325, 0.668651, 0.545545, -0.916761, 0.188231, -0.0218254, -1.30941, 0.624808, 0.28376, -1.35306, -0.597103, 0.28376, -1.35306, -0.143897, 0.0188968, -1.3609, 0.556343, 0.0572527, -1.32237, -0.65, 0.535527, -0.758831, -0.684524, 0.501963, -1.00405, -0.160659, 0.19645, -1.39683, 0.158814, 0.0338143, -1.34774)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_n1pdp"]
points = PackedVector3Array(-0.419202, 1.10631, -0.635671, 0.537698, 0.764009, 0.654762, 0.496789, 0.744843, 0.599126, -0.553571, 0.764009, 0.654762, 0.0513118, 1.34475, 0.0710843, 0.508698, 0.737699, -0.789925, -0.524569, 0.737701, -0.789921, 0.494009, 1.15666, -0.654745, -0.466193, 1.15666, 0.305521, 0.494009, 1.15666, 0.305521, 0.0513118, 1.34475, -0.404073, -0.512667, 0.74484, 0.599131, -0.509882, 0.98222, 0.480142, -0.466501, 1.0675, -0.645519, -0.407393, 1.14267, -0.581935, 0.494009, 0.98222, 0.480142, -0.0601894, 1.30924, -0.366216, -0.506343, 0.868286, -0.725059, -0.0601894, 1.30924, 0.0521557, -0.463825, 0.908945, -0.721429)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_l3td7"]
points = PackedVector3Array(0.19998, -5.87404e-05, 0.3, 0.0999902, -5.87404e-05, 0.3, 0.19998, -0.0777017, 0.289722, 0.299971, -0.0660141, 0.246261, 0.299971, -5.87404e-05, 0.254953, 0.299971, 0.0659554, 0.246261, 0.19998, 0.0775842, 0.289722, -2.70541e-13, -5.87404e-05, 0.254953, -2.70541e-13, -0.0660141, 0.246261, 0.0999902, -0.0777017, 0.289722, 0.0999902, 0.0775842, 0.289722, -2.70541e-13, 0.0659554, 0.246261, 0.19998, -0.150059, 0.259769, 0.299971, -0.127506, 0.22083, 0.3, -0.0426977, 0.159221, 0.3, -5.87404e-05, 0.164859, 0.3, 0.042639, 0.159221, 0.299971, 0.127447, 0.22083, 0.19998, 0.149941, 0.259769, -2.70541e-13, -0.127506, 0.22083, 0.0999902, -0.150059, 0.259769, 0.0999902, 0.149941, 0.259769, -2.70541e-13, 0.127447, 0.22083, 0.19998, -0.212138, 0.212079, 0.299971, -0.180364, 0.180305, 0.3, -0.0824589, 0.142776, 0.3, 0.0824001, 0.142776, 0.299971, 0.180305, 0.180305, 0.19998, 0.212079, 0.212079, -2.70541e-13, -0.180364, 0.180305, 0.0999902, -0.212138, 0.212079, 0.0999902, 0.212079, 0.212079, -2.70541e-13, 0.180305, 0.180305, 0.19998, -0.259828, 0.149941, 0.3, -0.142835, 0.0824001, 0.3, -0.116641, 0.116523, 0.299971, -0.220889, 0.127447, 0.3, 0.116523, 0.116523, 0.3, 0.142776, 0.0824001, 0.299971, 0.22083, 0.127447, 0.19998, 0.259769, 0.149941, -2.70541e-13, -0.220889, 0.127447, 0.0999902, -0.259828, 0.149941, 0.0999902, 0.259769, 0.149941, -2.70541e-13, 0.22083, 0.127447, 0.19998, -0.289839, 0.0775842, 0.3, -0.15928, 0.042639, 0.299971, -0.24632, 0.0659554, 0.3, 0.159221, 0.042639, 0.299971, 0.246261, 0.0659554, 0.19998, 0.289722, 0.0775842, -2.70541e-13, -0.24632, 0.0659554, 0.0999902, -0.289839, 0.0775842, 0.0999902, 0.289722, 0.0775842, -2.70541e-13, 0.246261, 0.0659554, 0.19998, -0.3, -5.87404e-05, 0.299971, -0.255012, -5.87404e-05, 0.3, -0.164918, -5.87404e-05, 0.3, 0.164859, -5.87404e-05, 0.299971, 0.254953, -5.87404e-05, 0.19998, 0.3, -5.87404e-05, -2.70541e-13, -0.255012, -5.87404e-05, 0.0999902, -0.3, -5.87404e-05, 0.0999902, 0.3, -5.87404e-05, -2.70541e-13, 0.254953, -5.87404e-05, 0.19998, -0.289839, -0.0777017, 0.299971, -0.24632, -0.0660141, 0.3, -0.15928, -0.0426977, 0.3, 0.159221, -0.0426977, 0.299971, 0.246261, -0.0660141, 0.19998, 0.289722, -0.0777017, -2.70541e-13, -0.24632, -0.0660141, 0.0999902, -0.289839, -0.0777017, 0.0999902, 0.289722, -0.0777017, -2.70541e-13, 0.246261, -0.0660141, 0.19998, -0.259828, -0.150059, 0.299971, -0.220889, -0.127506, 0.3, -0.142835, -0.0824589, 0.3, 0.142776, -0.0824589, 0.299971, 0.22083, -0.127506, 0.19998, 0.259769, -0.150059, -2.70541e-13, -0.220889, -0.127506, 0.0999902, -0.259828, -0.150059, 0.0999902, 0.259769, -0.150059, -2.70541e-13, 0.22083, -0.127506, 0.19998, -0.212138, -0.212138, 0.299971, -0.180364, -0.180364, 0.3, -0.116641, -0.116641, 0.299971, 0.180305, -0.180364, 0.3, 0.116523, -0.116641, 0.19998, 0.212079, -0.212138, -2.70541e-13, -0.180364, -0.180364, 0.0999902, -0.212138, -0.212138, 0.0999902, 0.212079, -0.212138, -2.70541e-13, 0.180305, -0.180364, 0.19998, -0.150059, -0.259828, 0.299971, -0.127506, -0.220889, 0.3, -0.0824589, -0.142835, 0.3, 0.0824001, -0.142835, 0.299971, 0.127447, -0.220889, 0.19998, 0.149941, -0.259828, -2.70541e-13, -0.127506, -0.220889, 0.0999902, -0.150059, -0.259828, 0.0999902, 0.149941, -0.259828, -2.70541e-13, 0.127447, -0.220889, 0.19998, -0.0777017, -0.289839, 0.299971, -0.0660141, -0.24632, 0.3, -0.0426977, -0.15928, 0.3, 0.042639, -0.15928, 0.299971, 0.0659554, -0.24632, 0.19998, 0.0775842, -0.289839, -2.70541e-13, -0.0660141, -0.24632, 0.0999902, -0.0777017, -0.289839, 0.0999902, 0.0775842, -0.289839, -2.70541e-13, 0.0659554, -0.24632, 0.19998, -5.87404e-05, -0.3, 0.299971, -5.87404e-05, -0.255012, 0.3, -5.87404e-05, -0.164918, -2.70541e-13, -5.87404e-05, -0.255012, 0.0999902, -5.87404e-05, -0.3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yb0ap"]
points = PackedVector3Array(-0.10002, -5.87404e-05, 0.3, -0.20001, -5.87404e-05, 0.3, -0.10002, -0.0777017, 0.289722, 0, -0.0660141, 0.246261, 0, -5.87404e-05, 0.254953, 0, 0.0659554, 0.246261, -0.10002, 0.0775842, 0.289722, -0.3, -5.87404e-05, 0.254953, -0.3, -0.0660141, 0.246261, -0.20001, -0.0777017, 0.289722, -0.20001, 0.0775842, 0.289722, -0.3, 0.0659554, 0.246261, -0.10002, -0.150059, 0.259769, 0, -0.127506, 0.22083, 0, 0.127447, 0.22083, -0.10002, 0.149941, 0.259769, -0.3, -0.127506, 0.22083, -0.20001, -0.150059, 0.259769, -0.20001, 0.149941, 0.259769, -0.3, 0.127447, 0.22083, -0.10002, -0.212138, 0.212079, 0, -0.180364, 0.180305, 0, 0.180305, 0.180305, -0.10002, 0.212079, 0.212079, -0.3, -0.180364, 0.180305, -0.20001, -0.212138, 0.212079, -0.20001, 0.212079, 0.212079, -0.3, 0.180305, 0.180305, -0.10002, -0.259828, 0.149941, 0, -0.220889, 0.127447, 0, 0.22083, 0.127447, -0.10002, 0.259769, 0.149941, -0.3, -0.220889, 0.127447, -0.20001, -0.259828, 0.149941, -0.20001, 0.259769, 0.149941, -0.3, 0.22083, 0.127447, -0.10002, -0.289839, 0.0775842, 0, -0.24632, 0.0659554, 0, 0.246261, 0.0659554, -0.10002, 0.289722, 0.0775842, -0.3, -0.24632, 0.0659554, -0.20001, -0.289839, 0.0775842, -0.20001, 0.289722, 0.0775842, -0.3, 0.246261, 0.0659554, -0.10002, -0.3, -5.87404e-05, 0, -0.255012, -5.87404e-05, 0, 0.254953, -5.87404e-05, -0.10002, 0.3, -5.87404e-05, -0.3, -0.255012, -5.87404e-05, -0.20001, -0.3, -5.87404e-05, -0.20001, 0.3, -5.87404e-05, -0.3, 0.254953, -5.87404e-05, -0.10002, -0.289839, -0.0777017, 0, -0.24632, -0.0660141, 0, 0.246261, -0.0660141, -0.10002, 0.289722, -0.0777017, -0.3, -0.24632, -0.0660141, -0.20001, -0.289839, -0.0777017, -0.20001, 0.289722, -0.0777017, -0.3, 0.246261, -0.0660141, -0.10002, -0.259828, -0.150059, 0, -0.220889, -0.127506, 0, 0.22083, -0.127506, -0.10002, 0.259769, -0.150059, -0.3, -0.220889, -0.127506, -0.20001, -0.259828, -0.150059, -0.20001, 0.259769, -0.150059, -0.3, 0.22083, -0.127506, -0.10002, -0.212138, -0.212138, 0, -0.180364, -0.180364, 0, 0.180305, -0.180364, -0.10002, 0.212079, -0.212138, -0.3, -0.180364, -0.180364, -0.20001, -0.212138, -0.212138, -0.20001, 0.212079, -0.212138, -0.3, 0.180305, -0.180364, -0.10002, -0.150059, -0.259828, 0, -0.127506, -0.220889, -0.10002, 0.149941, -0.259828, 0, 0.127447, -0.220889, -0.3, -0.127506, -0.220889, -0.20001, -0.150059, -0.259828, -0.20001, 0.149941, -0.259828, -0.3, 0.127447, -0.220889, -0.10002, -0.0777017, -0.289839, 0, -0.0660141, -0.24632, -0.10002, 0.0775842, -0.289839, 0, 0.0659554, -0.24632, -0.3, -0.0660141, -0.24632, -0.20001, -0.0777017, -0.289839, -0.20001, 0.0775842, -0.289839, -0.3, 0.0659554, -0.24632, -0.10002, -5.87404e-05, -0.3, 0, -5.87404e-05, -0.255012, -0.3, -5.87404e-05, -0.255012, -0.20001, -5.87404e-05, -0.3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rxdha"]
points = PackedVector3Array(0.19998, -5.87404e-05, 0.3, 0.0999902, -5.87404e-05, 0.3, 0.19998, -0.0777017, 0.289722, 0.299971, -0.0660141, 0.246261, 0.299971, -5.87404e-05, 0.254953, 0.299971, 0.0659554, 0.246261, 0.19998, 0.0775842, 0.289722, -2.70541e-13, -5.87404e-05, 0.254953, -2.70541e-13, -0.0660141, 0.246261, 0.0999902, -0.0777017, 0.289722, 0.0999902, 0.0775842, 0.289722, -2.70541e-13, 0.0659554, 0.246261, 0.19998, -0.150059, 0.259769, 0.299971, -0.127506, 0.22083, 0.3, -0.0426977, 0.159221, 0.3, -5.87404e-05, 0.164859, 0.3, 0.042639, 0.159221, 0.299971, 0.127447, 0.22083, 0.19998, 0.149941, 0.259769, -2.70541e-13, -0.127506, 0.22083, 0.0999902, -0.150059, 0.259769, 0.0999902, 0.149941, 0.259769, -2.70541e-13, 0.127447, 0.22083, 0.19998, -0.212138, 0.212079, 0.299971, -0.180364, 0.180305, 0.3, -0.0824589, 0.142776, 0.3, 0.0824001, 0.142776, 0.299971, 0.180305, 0.180305, 0.19998, 0.212079, 0.212079, -2.70541e-13, -0.180364, 0.180305, 0.0999902, -0.212138, 0.212079, 0.0999902, 0.212079, 0.212079, -2.70541e-13, 0.180305, 0.180305, 0.19998, -0.259828, 0.149941, 0.3, -0.142835, 0.0824001, 0.3, -0.116641, 0.116523, 0.299971, -0.220889, 0.127447, 0.3, 0.116523, 0.116523, 0.3, 0.142776, 0.0824001, 0.299971, 0.22083, 0.127447, 0.19998, 0.259769, 0.149941, -2.70541e-13, -0.220889, 0.127447, 0.0999902, -0.259828, 0.149941, 0.0999902, 0.259769, 0.149941, -2.70541e-13, 0.22083, 0.127447, 0.19998, -0.289839, 0.0775842, 0.3, -0.15928, 0.042639, 0.299971, -0.24632, 0.0659554, 0.3, 0.159221, 0.042639, 0.299971, 0.246261, 0.0659554, 0.19998, 0.289722, 0.0775842, -2.70541e-13, -0.24632, 0.0659554, 0.0999902, -0.289839, 0.0775842, 0.0999902, 0.289722, 0.0775842, -2.70541e-13, 0.246261, 0.0659554, 0.19998, -0.3, -5.87404e-05, 0.299971, -0.255012, -5.87404e-05, 0.3, -0.164918, -5.87404e-05, 0.3, 0.164859, -5.87404e-05, 0.299971, 0.254953, -5.87404e-05, 0.19998, 0.3, -5.87404e-05, -2.70541e-13, -0.255012, -5.87404e-05, 0.0999902, -0.3, -5.87404e-05, 0.0999902, 0.3, -5.87404e-05, -2.70541e-13, 0.254953, -5.87404e-05, 0.19998, -0.289839, -0.0777017, 0.299971, -0.24632, -0.0660141, 0.3, -0.15928, -0.0426977, 0.3, 0.159221, -0.0426977, 0.299971, 0.246261, -0.0660141, 0.19998, 0.289722, -0.0777017, -2.70541e-13, -0.24632, -0.0660141, 0.0999902, -0.289839, -0.0777017, 0.0999902, 0.289722, -0.0777017, -2.70541e-13, 0.246261, -0.0660141, 0.19998, -0.259828, -0.150059, 0.299971, -0.220889, -0.127506, 0.3, -0.142835, -0.0824589, 0.3, 0.142776, -0.0824589, 0.299971, 0.22083, -0.127506, 0.19998, 0.259769, -0.150059, -2.70541e-13, -0.220889, -0.127506, 0.0999902, -0.259828, -0.150059, 0.0999902, 0.259769, -0.150059, -2.70541e-13, 0.22083, -0.127506, 0.19998, -0.212138, -0.212138, 0.299971, -0.180364, -0.180364, 0.3, -0.116641, -0.116641, 0.299971, 0.180305, -0.180364, 0.3, 0.116523, -0.116641, 0.19998, 0.212079, -0.212138, -2.70541e-13, -0.180364, -0.180364, 0.0999902, -0.212138, -0.212138, 0.0999902, 0.212079, -0.212138, -2.70541e-13, 0.180305, -0.180364, 0.19998, -0.150059, -0.259828, 0.299971, -0.127506, -0.220889, 0.3, -0.0824589, -0.142835, 0.3, 0.0824001, -0.142835, 0.299971, 0.127447, -0.220889, 0.19998, 0.149941, -0.259828, -2.70541e-13, -0.127506, -0.220889, 0.0999902, -0.150059, -0.259828, 0.0999902, 0.149941, -0.259828, -2.70541e-13, 0.127447, -0.220889, 0.19998, -0.0777017, -0.289839, 0.299971, -0.0660141, -0.24632, 0.3, -0.0426977, -0.15928, 0.3, 0.042639, -0.15928, 0.299971, 0.0659554, -0.24632, 0.19998, 0.0775842, -0.289839, -2.70541e-13, -0.0660141, -0.24632, 0.0999902, -0.0777017, -0.289839, 0.0999902, 0.0775842, -0.289839, -2.70541e-13, 0.0659554, -0.24632, 0.19998, -5.87404e-05, -0.3, 0.299971, -5.87404e-05, -0.255012, 0.3, -5.87404e-05, -0.164918, -2.70541e-13, -5.87404e-05, -0.255012, 0.0999902, -5.87404e-05, -0.3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_s6wnr"]
points = PackedVector3Array(-0.10002, -5.87404e-05, 0.3, -0.20001, -5.87404e-05, 0.3, -0.10002, -0.0777017, 0.289722, 0, -0.0660141, 0.246261, 0, -5.87404e-05, 0.254953, 0, 0.0659554, 0.246261, -0.10002, 0.0775842, 0.289722, -0.3, -5.87404e-05, 0.254953, -0.3, -0.0660141, 0.246261, -0.20001, -0.0777017, 0.289722, -0.20001, 0.0775842, 0.289722, -0.3, 0.0659554, 0.246261, -0.10002, -0.150059, 0.259769, 0, -0.127506, 0.22083, 0, 0.127447, 0.22083, -0.10002, 0.149941, 0.259769, -0.3, -0.127506, 0.22083, -0.20001, -0.150059, 0.259769, -0.20001, 0.149941, 0.259769, -0.3, 0.127447, 0.22083, -0.10002, -0.212138, 0.212079, 0, -0.180364, 0.180305, 0, 0.180305, 0.180305, -0.10002, 0.212079, 0.212079, -0.3, -0.180364, 0.180305, -0.20001, -0.212138, 0.212079, -0.20001, 0.212079, 0.212079, -0.3, 0.180305, 0.180305, -0.10002, -0.259828, 0.149941, 0, -0.220889, 0.127447, 0, 0.22083, 0.127447, -0.10002, 0.259769, 0.149941, -0.3, -0.220889, 0.127447, -0.20001, -0.259828, 0.149941, -0.20001, 0.259769, 0.149941, -0.3, 0.22083, 0.127447, -0.10002, -0.289839, 0.0775842, 0, -0.24632, 0.0659554, 0, 0.246261, 0.0659554, -0.10002, 0.289722, 0.0775842, -0.3, -0.24632, 0.0659554, -0.20001, -0.289839, 0.0775842, -0.20001, 0.289722, 0.0775842, -0.3, 0.246261, 0.0659554, -0.10002, -0.3, -5.87404e-05, 0, -0.255012, -5.87404e-05, 0, 0.254953, -5.87404e-05, -0.10002, 0.3, -5.87404e-05, -0.3, -0.255012, -5.87404e-05, -0.20001, -0.3, -5.87404e-05, -0.20001, 0.3, -5.87404e-05, -0.3, 0.254953, -5.87404e-05, -0.10002, -0.289839, -0.0777017, 0, -0.24632, -0.0660141, 0, 0.246261, -0.0660141, -0.10002, 0.289722, -0.0777017, -0.3, -0.24632, -0.0660141, -0.20001, -0.289839, -0.0777017, -0.20001, 0.289722, -0.0777017, -0.3, 0.246261, -0.0660141, -0.10002, -0.259828, -0.150059, 0, -0.220889, -0.127506, 0, 0.22083, -0.127506, -0.10002, 0.259769, -0.150059, -0.3, -0.220889, -0.127506, -0.20001, -0.259828, -0.150059, -0.20001, 0.259769, -0.150059, -0.3, 0.22083, -0.127506, -0.10002, -0.212138, -0.212138, 0, -0.180364, -0.180364, 0, 0.180305, -0.180364, -0.10002, 0.212079, -0.212138, -0.3, -0.180364, -0.180364, -0.20001, -0.212138, -0.212138, -0.20001, 0.212079, -0.212138, -0.3, 0.180305, -0.180364, -0.10002, -0.150059, -0.259828, 0, -0.127506, -0.220889, -0.10002, 0.149941, -0.259828, 0, 0.127447, -0.220889, -0.3, -0.127506, -0.220889, -0.20001, -0.150059, -0.259828, -0.20001, 0.149941, -0.259828, -0.3, 0.127447, -0.220889, -0.10002, -0.0777017, -0.289839, 0, -0.0660141, -0.24632, -0.10002, 0.0775842, -0.289839, 0, 0.0659554, -0.24632, -0.3, -0.0660141, -0.24632, -0.20001, -0.0777017, -0.289839, -0.20001, 0.0775842, -0.289839, -0.3, 0.0659554, -0.24632, -0.10002, -5.87404e-05, -0.3, 0, -5.87404e-05, -0.255012, -0.3, -5.87404e-05, -0.255012, -0.20001, -5.87404e-05, -0.3)

[node name="Taxi" type="RigidBody3D"]
collision_layer = 2
collision_mask = 3
mass = 2000.0
physics_material_override = ExtResource("1_av0nu")
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.1, 0)
freeze_mode = 1
continuous_cd = true
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_ik2h1")
metadata/_custom_type_script = "uid://wiw33iaw2pjg"

[node name="Plugins" type="Node3D" parent="."]

[node name="LocalVelocityProcessor" type="Node3D" parent="Plugins"]
script = ExtResource("3_tcv0s")
metadata/_custom_type_script = "uid://cudk564mgmydg"

[node name="Wheels" type="Node3D" parent="Plugins"]

[node name="WheelFL" type="Node3D" parent="Plugins/Wheels"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.3, 0.3, -0.76)
script = ExtResource("3_gy57t")
wheel_width = 0.25
suspension_spring = 30000.0
suspension_damper = 1500.0
metadata/_custom_type_script = "uid://cffihwqtqvy4x"

[node name="WheelFR" type="Node3D" parent="Plugins/Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.3, -0.76)
script = ExtResource("3_gy57t")
wheel_width = 0.25
suspension_spring = 30000.0
suspension_damper = 1500.0
metadata/_custom_type_script = "uid://cffihwqtqvy4x"

[node name="WheelBL" type="Node3D" parent="Plugins/Wheels"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.3, 0.3, 0.76)
script = ExtResource("3_gy57t")
wheel_width = 0.25
suspension_spring = 30000.0
suspension_damper = 1500.0
metadata/_custom_type_script = "uid://cffihwqtqvy4x"

[node name="WheelBR" type="Node3D" parent="Plugins/Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.3, 0.76)
script = ExtResource("3_gy57t")
wheel_width = 0.25
suspension_spring = 30000.0
suspension_damper = 1500.0
metadata/_custom_type_script = "uid://cffihwqtqvy4x"

[node name="WheelsProcessor" type="Node3D" parent="Plugins"]
script = ExtResource("4_leshp")
wheels = Array[NodePath]([NodePath("../Wheels/WheelFL"), NodePath("../Wheels/WheelFR"), NodePath("../Wheels/WheelBL"), NodePath("../Wheels/WheelBR")])
metadata/_custom_type_script = "uid://branpjvwdtvgm"

[node name="Downforce" type="Node3D" parent="Plugins"]
script = ExtResource("10_axug4")
downforce = 20000.0
downforce_speed_curve = SubResource("Resource_4f48m")
metadata/_custom_type_script = "uid://i723lqbcm7qo"

[node name="Brake" type="Node3D" parent="Plugins"]
script = ExtResource("7_dm0ij")
metadata/_custom_type_script = "uid://v0cpq7q6mjou"

[node name="Engine" type="Node3D" parent="Plugins"]
script = ExtResource("4_pq6ol")
engine_force = 15000.0
gearbox_switch_time = 0.5
rpm_curve = SubResource("Curve_1amw3")
rpm_speed_down = 0.25
metadata/_custom_type_script = "uid://bvfqai7uunpc3"

[node name="SideGrip" type="Node3D" parent="Plugins"]
script = ExtResource("8_dm0ij")
metadata/_custom_type_script = "uid://cil4ufto2v87g"

[node name="HoldBoost" type="Node3D" parent="Plugins"]
script = ExtResource("12_4f48m")
metadata/_custom_type_script = "uid://un1kd6buaufw"

[node name="CoastResistance" type="Node3D" parent="Plugins"]
script = ExtResource("13_iv7oc")
resistance_force = 5000.0
metadata/_custom_type_script = "uid://put3fygiiqh8"

[node name="SteerOffsetProcessor" type="Node3D" parent="Plugins"]
script = ExtResource("10_gh3hu")
steer_offset_curve = SubResource("Resource_n1pdp")
metadata/_custom_type_script = "uid://bieogbd1wisbk"

[node name="Steer" type="Node3D" parent="Plugins"]
script = ExtResource("9_r3t53")
distance_between_wheels = 1.52
steer_velocity_target = 0.785398
smooth_steer_max_speed = 5.0
metadata/_custom_type_script = "uid://br0vp35kb6pyw"

[node name="AngularGrip" type="Node3D" parent="Plugins"]
script = ExtResource("10_r3t53")
metadata/_custom_type_script = "uid://dbisg1nrvftc4"

[node name="ForceConverterProcessor" type="Node3D" parent="Plugins"]
script = ExtResource("9_bknco")
reduced_grip_curve = SubResource("Resource_0wb0t")
metadata/_custom_type_script = "uid://b1lao6jpcowsa"

[node name="AirDrag" type="Node3D" parent="Plugins"]
script = ExtResource("17_1amw3")
metadata/_custom_type_script = "uid://bejoolwrgdt81"

[node name="Visuals" type="Node3D" parent="Plugins"]

[node name="WheelVisuals" type="Node3D" parent="Plugins/Visuals"]
script = ExtResource("14_n1pdp")
wheel_meshes = Dictionary[NodePath, NodePath]({
NodePath("../../Wheels/WheelFL"): NodePath("../../../Visuals/wheel-front-left"),
NodePath("../../Wheels/WheelFR"): NodePath("../../../Visuals/wheel-front-right"),
NodePath("../../Wheels/WheelBL"): NodePath("../../../Visuals/wheel-back-left"),
NodePath("../../Wheels/WheelBR"): NodePath("../../../Visuals/wheel-back-right")
})
wheel_flags = Dictionary[NodePath, int]({
NodePath("../../Wheels/WheelFL"): 5,
NodePath("../../Wheels/WheelFR"): 5,
NodePath("../../Wheels/WheelBL"): 2,
NodePath("../../Wheels/WheelBR"): 2
})
metadata/_custom_type_script = "uid://cgyn0v8p7gfu6"

[node name="Audio" type="Node3D" parent="Plugins"]

[node name="EngineAudio" type="Node3D" parent="Plugins/Audio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, -0.8)
script = ExtResource("19_wyo5d")
max_pitch = 1.2
engine_audio_scene = ExtResource("20_xg3rg")
metadata/_custom_type_script = "uid://ceu8yif662nyj"

[node name="Visuals" parent="." instance=ExtResource("12_r3t53")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="wheel-front-right" parent="Visuals" index="0"]
layers = 4
gi_mode = 2

[node name="wheel-front-left" parent="Visuals" index="1"]
layers = 4
gi_mode = 2

[node name="wheel-back-right" parent="Visuals" index="2"]
layers = 4
gi_mode = 2

[node name="wheel-back-left" parent="Visuals" index="3"]
layers = 4
gi_mode = 2

[node name="body" parent="Visuals" index="4"]
layers = 4
gi_mode = 2
surface_material_override/0 = ExtResource("13_eq170")

[node name="FollowCameraOffset" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 4)

[node name="HoodCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, -0.75)

[node name="CollisionBody1" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.18557e-09, 0.15, 0.025)
shape = SubResource("ConvexPolygonShape3D_gh3hu")

[node name="CollisionBody2" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.18557e-09, 0.15, 0.025)
shape = SubResource("ConvexPolygonShape3D_0wb0t")

[node name="CollisionBody3" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.18557e-09, 0.15, 0.025)
shape = SubResource("ConvexPolygonShape3D_n1pdp")

[node name="CollisionWheelBL" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.3, 0.3, 0.76)
shape = SubResource("ConvexPolygonShape3D_l3td7")

[node name="CollisionWheelBR" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.3, 0.3, 0.76)
shape = SubResource("ConvexPolygonShape3D_yb0ap")

[node name="CollisionWheelFL" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.3, 0.3, -0.76)
shape = SubResource("ConvexPolygonShape3D_rxdha")

[node name="CollisionWheelFR" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.3, 0.3, -0.76)
shape = SubResource("ConvexPolygonShape3D_s6wnr")

[editable path="Visuals"]
